<resources>
    <string name="app_name">Probabilistic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="button_send">Send</string>
    <string name="button_rules">Read the rules</string>
    <string name="button_start">Start the game</string>
    <string name="button_home">Home</string>
    <string name="button_ar">Augmented Reality</string>
    <string name="button_touch">Touch</string>
    <string name="m_launcher">Launcher</string>
    <string name="m_settings">Settings</string>
    <string name="m_rules">Rules</string>
    <string name="m_help">Help</string>
    <string name="m_about">About</string>
    <string name="switch1">Type of Game</string>
    <string name="switch2">Hints Enabled</string>
    <string name="switch3">Computer</string>
    <string name="switch4">Local Mulitplayer</string>
    <string name="switch5">Global Mulitplayer</string>
    <string name="switch1_right">Normal</string>
    <string name="switch1_left">Probabilistic</string>
    <string name="switch2_right">No</string>
    <string name="switch2_left">Yes</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_main">Launcher</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_open_gles20">OpenGLES20</string>
    <string name="title_activity_augmented_reality">AugmentedReality</string>
    <string name="camera_alert">camera_alert</string>
    <string name="switch_camera">camera</string>
    <string name="rules">Riisfeldt’s Probabilistic Chess\n\n
Rules and Probability Ratios\n
The rules follow normal chess except for the taking of pieces.\n\n
Each piece is assigned the standard number of points:\n
Pawn       1\n
Bishop     3\n
Knight     3\n
Rook       5\n
Queen      9\n
King       15\n\n
The probability of piece X taking piece Y is  (Points (X))/(Points (X)+ Points (Y)). \n\n
For example, the probability of a queen taking a pawn would be 9/(9+1) = 9/10.  The probability of a pawn taking a queen would be 1/(1+9) = 1/10.  The probability of any piece taking an opponent’s corresponding piece is 1/2.  \n\n
When the attacking player attempts to take a piece, a random probability generator determines whether or not he is successful in taking the piece.  The attacking player’s move finishes after attempting to take a piece, regardless of whether or not he is successful. Furthermore, the victory condition is not checkmate.  Rather, it is actually taking the king.  However, a player must still move his king when he is in check.  Therefore, to win, the attacking player must first checkmate the opposing king and then get lucky an actually take it.\n\n
</string>
    <string name="helps">
        Call 911. Drop the beat
    </string>
    <string name="abouts">
        This app is a Knus Enterprises creation. The idea was developed by Level 5 TRizzle and the app developed by Level 4 PeaceDogz.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_message">Enter move (eg 1 2 2 2)</string>


</resources>
