<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/launcher"
        android:icon="@drawable/m_launcher"
        android:title="@string/m_launcher"
        yourapp:showAsAction="ifRoom" />
    <item android:id="@+id/settings"
        android:icon="@mipmap/m_settings"
        android:title="@string/m_settings"
        yourapp:showAsAction="never" />
    <item android:id="@+id/rules"
        android:icon="@drawable/m_rules"
        android:title="@string/m_rules"
        yourapp:showAsAction="never" />
    <item android:id="@+id/help"
        android:icon="@mipmap/m_help"
        android:title="@string/m_help"
        yourapp:showAsAction="never" />
    <item android:id="@+id/about"
        android:icon="@drawable/m_about"
        android:title="@string/m_about"
        yourapp:showAsAction="never" />
</menu>