
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity" >
 
    <RelativeLayout
    	android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView
	        android:id="@+id/rules_text"
	        android:layout_centerVertical="true"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/rules" />
	    <Button
	        android:id="@+id/button_home"	        
			android:layout_below="@id/rules_text"
        	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_home" 
	        android:onClick="home"/>   
	    <Button
	        android:layout_below="@id/rules_text"
	        android:layout_toRightOf="@id/button_home"
        	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_start" 
	        android:onClick="start"/>	    
	</RelativeLayout>
</ScrollView>